--- a/app/_styles/panel.css
+++ b/app/_styles/panel.css
@@ -1,7 +1,10 @@
 .panel{
-    @apply w-1/4 border border-dashed rounded-lg;
+    @apply w-2/5 border border-dashed rounded-lg;
 
     .title{
         @apply flex justify-between items-center text-sm font-light h-[10px] py-4 px-2
+    }
+    .content{
+        @apply p-2
     }
 }
