--- a/app/_styles/board.css
+++ b/app/_styles/board.css
@@ -1,3 +1,9 @@
 .board{
-    @apply w-full border-border flex gap-4
+    @apply w-full border-border flex gap-4 
+    /* @apply flex overflow-x-auto p-4; */
+
+}
+
+.board-wrapper{
+    @apply w-full h-screen overflow-auto
 }
