--- a/app/_styles/panel.css
+++ b/app/_styles/panel.css
@@ -1,10 +1,11 @@
 .panel{
-    @apply w-[350px] max-w-[100%] flex-1 border border-dashed rounded-lg;
+    @apply w-[350px] max-w-[100%] flex-1 border border-dashed rounded-lg transition-all duration-300 ease-in-out;
    
     .title{
         @apply flex justify-between items-center text-sm font-light h-[10px] py-4 px-2;
     }
     .content{
-        @apply p-2 space-y-4
+        @apply p-2 space-y-4 overflow-y-auto h-[calc(100vh-30vh)];
+        
     }
 }
